ESTRUCTURA INICIAL DE LA CABECERA

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+    <div>
+        ESTA ES LA CABECERA :)
+    </div>
     <h1>AQUI VAMOS A HACER UN BLOG POST</h1>
     <p>ESTE ES EL PARRAFO DE INICIO</p>
 
