FINALIZADA LA CABCERA CON DISEÑO AZUL

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<html>
+
 <head>
-    <title>EL TITULO DEL POST</title>
-    <link rel="stylesheet" href="./estilos.css">
+    <title>El titulo del post</title>
+    <link rel="stylesheet" href="./estilos.css" />
 </head>
 
 <body>
-    <div>
-        ESTA ES LA CABECERA :)
+    <div id="container">
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog de cabecera</span>
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
+            </p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
+                salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+            <p>Suscribete y dale like</p>
+        </div>
     </div>
-    <h1>AQUI VAMOS A HACER UN BLOG POST</h1>
-    <p>ESTE ES EL PARRAFO DE INICIO</p>
-
-    <h2>PRUEBA BRANCH RAMA 1</h2>
 </body>
 
 </html>
