AGREGADO EL CONTENIDO ADICIONAL DEL MASTER

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <h1>AQUI VAMOS A HACER UN BLOG POST</h1>
     <p>ESTE ES EL PARRAFO DE INICIO</p>
-
+    <P>ESTE ES EL SEGUNDO PARRAFO EN MASTER</P>
     <h2>PRUEBA BRANCH RAMA 1</h2>
 </body>
 
