--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>El titulo del post</title>
+    <title>El titulo del post 2</title>
     <link rel="stylesheet" href="./estilos.css" />
 </head>
 
