--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog con ssh desde visual
+            Hyperblog con ssh desde visual Esteban
             <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
